overflow task list fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ align-items: center;
 h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
+  margin-top: 10px;
   text-align: center;
   }
 
@@ -165,13 +166,17 @@ justify-content: space-evenly;
   background-color: var(--color-secondary); /* Changes the background color */
   color: #fff; /* Changes the text color */
   padding: 5px; /* Adds padding for better visibility */
+  border-radius: 5px;
   transition: background-color 0.3s, border 0.3s; /* Adds a smooth transition effect */
 }
 
 ol {
-  list-style-type: none;
+  list-style-type: decimal;
   position: relative;
-  text-align: center;
+  text-align: left;
+  word-wrap: break-word; /* Ensures long words break to the next line */
+  word-break: break-all;  /* Breaks at any character to prevent overflow */
+  white-space: normal;    /* Allows the text to wrap onto the next line */
   right: 10px; 
   padding-left: 20px;
     
